# QueueHelper

./: .gitignore  README.md  package-lock.json  package.json  update.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  commands.rs  lib.rs  main.rs  models.rs
src-tauri/src/app/: context.rs
src-tauri/src/automation/: mod.rs  modules.rs
src-tauri/src/automation/modules/: auto_accept.rs  auto_ban.rs  auto_hover.rs  auto_pick.rs  rules_engine.rs  shared.rs
src-tauri/src/core/: event_bus.rs  events.rs  mod.rs  state.rs
src-tauri/src/lcu/: http.rs  lockfile.rs  manager.rs  mod.rs  types.rs  ws.rs
src-tauri/src/persistence/: json_store.rs  mod.rs  monitor_db.rs
src/api/: tauri.ts
src/components/: ChampionPicker.tsx  NavSidebar.tsx  NumberInput.tsx  StatusBadge.tsx  ToggleCard.tsx  TutorialOverlay.tsx
src/hooks/: AppContext.tsx  useApp.ts  useChampions.ts
src/i18n/: en.ts  index.tsx  tr.ts
src/pages/: DraftRules.tsx  Home.tsx  Monitor.tsx  Profiles.tsx  Settings.tsx
src/types/: models.ts
