[package]
name = "queue-helper"
version = "0.1.0"
description = "Queue Helper - lightweight League champion select automation companion"
authors = ["ADMIN"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "queue_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
futures-util = "0.3"
native-tls = "0.2"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "http2"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tokio-native-tls = "0.3"
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
image = "0.25"

